# Beluga-Client

./: README.md
RobotViz/usv_gazebo_plugins/src/: usv_gazebo_dynamics_plugin.cc  usv_gazebo_wind_plugin.cc
RobotViz/velodyne_description/launch/: example.launch  lidar.launch
RobotViz/velodyne_description/rviz/: example.rviz
RobotViz/velodyne_description/urdf/: VLP-16.urdf.xacro  example.urdf.xacro
RobotViz/wamv_description/models/WAM-V-Base/mesh/: WAM-V-Base.dae
RobotViz/wamv_description/urdf/: wamv_base.urdf.xacro  wamv_base_mark.xacro
RobotViz/wamv_description/urdf/mesh/: imagechange.py  mark_label5.DAE
RobotViz/wamv_gazebo/launch/: wamv_display.launch
RobotViz/wamv_gazebo/urdf/: wamv_gazebo.urdf.xacro  wamv_gazebo_mark.urdf.xacro  wamv_gazebo_mark.xacro
RobotViz/wamv_gazebo/urdf/sensors/: wamv_gps.xacro
interactive/: CMakeLists.txt  package.xml
interactive/config/: param.txt
interactive/include/: cluster.h  clusterMember.h  coordinate_trans.h  gpslink.h  marker.h
interactive/src/: cluster.cpp  clusterMember.cpp  coordinate_trans.cpp  gpslink.cpp  marker.cpp  pointing_ball.cpp  pointing_range.cpp  start.cpp
me120_msgs/: CMakeLists.txt  package.xml
me120_msgs/msg/: CloudClusterArray.msg  ClusterMember.msg  ClusterMemberArray.msg  PcSegConfig.msg  PointsImage.msg  StartInfo.msg  img_obj.msg  img_objs.msg
me120_tool/: CMakeLists.txt  package.xml
me120_tool/launch/: demo.launch  mono_leopard.launch  stereo.launch
rviz_satellite-master/: README.md
rviz_satellite-master/launch/: demo(复件).launch  demo.launch  demo.rviz
rviz_satellite-master/src/: aerialmap_display.cpp
